--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tma4851_eit_big_data_gruppe_3",
   "version": "1.0.0",
   "description": "EiT",
-  "main": "client/index.js",
+  "main": "./src/index.js",
   "scripts": {
     "start": "webpack-dev-server",
     "build": "webpack"
@@ -28,6 +28,8 @@
   },
   "dependencies": {
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-simple-maps": "^0.10.3",
+    "react-tooltip": "^3.4.0"
   }
 }
