--- a/package.json
+++ b/package.json
@@ -31,9 +31,10 @@
     "d3": "^4.13.0",
     "d3-transition": "^1.1.1",
     "react": "^16.2.0",
+    "react-burger-menu": "^2.2.3",
     "react-dom": "^16.2.0",
-    "styled-components": "^3.1.6",
     "react-simple-maps": "^0.10.3",
-    "react-tooltip": "^3.4.0"
+    "react-tooltip": "^3.4.0",
+    "styled-components": "^3.1.6"
   }
 }
