--- a/package.json
+++ b/package.json
@@ -24,16 +24,22 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "html-webpack-plugin": "^2.30.1",
+    "redux-devtools": "^3.4.1",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.1"
   },
   "dependencies": {
     "d3": "^4.13.0",
     "d3-transition": "^1.1.1",
+    "next": "^5.0.0",
+    "next-redux-wrapper": "^1.3.5",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "styled-components": "^3.1.6",
+    "react-redux": "^5.0.7",
     "react-simple-maps": "^0.10.3",
-    "react-tooltip": "^3.4.0"
+    "react-tooltip": "^3.4.0",
+    "redux": "^3.7.2",
+    "redux-tooltip": "^0.7.2",
+    "styled-components": "^3.1.6"
   }
 }
