--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "d3-transition": "^1.1.1",
     "next": "^5.0.0",
     "next-redux-wrapper": "^1.3.5",
+    "npm": "^5.7.1",
     "react": "^16.2.0",
     "react-burger-menu": "^2.2.3",
     "react-dom": "^16.2.0",
