--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
   "dependencies": {
     "d3": "^4.13.0",
     "d3-transition": "^1.1.1",
+    "material-ui": "^0.20.0",
     "next": "^5.0.0",
     "next-redux-wrapper": "^1.3.5",
     "npm": "^5.7.1",
     "react": "^16.2.0",
     "react-burger-menu": "^2.2.3",
     "react-dom": "^16.2.0",
+    "react-rangeslider": "^2.2.0",
     "react-redux": "^5.0.7",
     "react-simple-maps": "^0.10.3",
     "react-tooltip": "^3.4.0",
