--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "webpack-dev-server": "^2.11.1"
   },
   "dependencies": {
+    "chart.js": "^2.7.2",
     "d3": "^4.13.0",
     "d3-transition": "^1.1.1",
     "material-ui": "^0.20.0",
@@ -37,6 +38,7 @@
     "npm": "^5.7.1",
     "react": "^16.2.0",
     "react-burger-menu": "^2.2.3",
+    "react-chartjs-2": "^2.7.0",
     "react-dom": "^16.2.0",
     "react-rangeslider": "^2.2.0",
     "react-redux": "^5.0.7",
